# perestroika

./: Cargo.toml  README.md
crates/yantra/: Cargo.toml
crates/yantra/src/: lib.rs  main.rs
crates/yantra_audio/: Cargo.toml
crates/yantra_audio/src/: lib.rs
crates/yantra_graphics/: Cargo.toml
crates/yantra_graphics/src/: buffer_bundle.rs  camera.rs  depth_image.rs  graphics_pipeline.rs  lib.rs  render_pass.rs
crates/yantra_log/: Cargo.toml
crates/yantra_log/src/: lib.rs
crates/yantra_tokamak/: Cargo.toml
crates/yantra_tokamak/src/: lib.rs
shaders/: cube.frag  cube.vert  quad.frag  quad.vert
src/: audio_render.rs  camera.rs  experimental.rs  game.rs  input.rs  lib.rs  logging.rs  video_render.rs  window.rs
src/experimental/: dsp.rs  rgmk.rs  riscv.rs
